--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "daisyui": "^1.14.2",
+    "moment": "^2.29.1",
     "react": "^17.0.0",
+    "react-big-calendar": "^0.36.1",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.3.0",
     "tailwind-scrollbar-hide": "^1.0.3"
