feat: fix calendar

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
     "daisyui": "^1.14.2",
+    "dates-generator": "^1.0.4",
     "install": "^0.13.0",
-    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-big-calendar": "^0.36.1",
