--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "@tailwindcss/typography": "^0.4.1",
     "daisyui": "^1.14.2",
+    "date-fns": "^2.25.0",
     "dates-generator": "^1.0.4",
     "install": "^0.13.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-big-calendar": "^0.36.1",
+    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^7.18.1",
     "react-router-dom": "^5.3.0",
     "tailwind-scrollbar-hide": "^1.0.3"
   },
